k8s/service.yaml
apiVersion: v1
kind: Service
metadata: {name: bugtrack, namespace: bugtrack}
spec: {selector: {app: bugtrack, version: blue}, ports: [{port: 80, targetPort: 5000}]}
